tests/machine/x/cpp/dataset_sort_take_limit.error
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:21:38: error: ‘p’ was not declared in this scope
   21 |     std::vector<std::pair<decltype((-p.price)), decltype(p)>> __items;
      |                                      ^
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:21:49: error: template argument 1 is invalid
   21 |     std::vector<std::pair<decltype((-p.price)), decltype(p)>> __items;
      |                                                 ^~~~~~~~~~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:21:49: error: template argument 2 is invalid
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:21:60: error: template argument 1 is invalid
   21 |     std::vector<std::pair<decltype((-p.price)), decltype(p)>> __items;
      |                                                            ^~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:21:60: error: template argument 2 is invalid
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:23:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   23 |       __items.push_back({(-p.price), p});
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:25:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
   25 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:25:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
   25 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:27:29: error: request for member ‘size’ in ‘__items’, which is of non-class type ‘int’
   27 |     if ((size_t)1 < __items.size())
      |                             ^~~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:28:15: error: request for member ‘erase’ in ‘__items’, which is of non-class type ‘int’
   28 |       __items.erase(__items.begin(), __items.begin() + 1);
      |               ^~~~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:28:29: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
   28 |       __items.erase(__items.begin(), __items.begin() + 1);
      |                             ^~~~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:28:46: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
   28 |       __items.erase(__items.begin(), __items.begin() + 1);
      |                                              ^~~~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:29:29: error: request for member ‘size’ in ‘__items’, which is of non-class type ‘int’
   29 |     if ((size_t)3 < __items.size())
      |                             ^~~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:30:15: error: request for member ‘resize’ in ‘__items’, which is of non-class type ‘int’
   30 |       __items.resize(3);
      |               ^~~~~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:31:28: error: template argument 1 is invalid
   31 |     std::vector<decltype(p)> __res;
      |                            ^
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:31:28: error: template argument 2 is invalid
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:32:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
   32 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:32:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
   32 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:33:13: error: request for member ‘push_back’ in ‘__res’, which is of non-class type ‘int’
   33 |       __res.push_back(p.second);
      |             ^~~~~~~~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:38:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
   38 |   for (auto item : expensive) {
      |                    ^~~~~~~~~
      |                    std::begin
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_VMValid_Goldendataset_sort_take_limit1481267367/001/prog.cpp:38:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
   38 |   for (auto item : expensive) {
      |                    ^~~~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
